# autograph

./: .clang-format  .gitmodules  CMakeLists.txt  RATIONALE
examples/: CMakeLists.txt
examples/assets/glsl/: copy_tex.glsl  scene.glsl~  utils.glsl
examples/common/: boilerplate.cpp  boilerplate.hpp  camera.cpp  camera.hpp  input.hpp  sample.hpp  uniforms.hpp
examples/common/glsl/: copy_tex.glsl  default.glsl  mesh_in.glsl  model_viewer.glsl  scene.glsl
examples/common/img/brushes/: Thumbs.db
examples/compute/: CMakeLists.txt  main.cpp
examples/input/: main.cpp
examples/model_viewer/: CMakeLists.txt  main.cpp
examples/painter/: main.cpp
examples/renderpass/: main.cpp
examples/shaders/: default.frag  default.vert
examples/simple/: CMakeLists.txt  TODO  await.cpp  await.hpp  blur.hpp  brush_path.hpp  brush_tool.hpp  camera.hpp  canvas.hpp  canvas_editor.hpp  layer.hpp  main.cpp  painter.hpp  pipelines.hpp  shading_curves.hpp  smudge.hpp  tool.hpp  types.hpp  ui.hpp
examples/simple/glsl/: base_color_to_offset.glsl  blur.glsl  blur_brush.glsl  brush.glsl  canvas.glsl  copy_tex.glsl  draw_stroke_mask.glsl  evaluate.glsl  flatten_stroke.glsl  fullscreen_vs.glsl  gradient.glsl  normal_map.glsl  optical_flow.glsl  scene.glsl  shading_curve.glsl  shading_overlay.glsl  smudge.glsl  utils.glsl
examples/simple/imgui/: imgui_impl_glfw_gl3.cpp
examples/simple/layers/: blur_layer.hpp  color_layer.hpp
examples/simple/tools/: blur.hpp  detail.hpp  smudge.hpp
examples/vulkan_test/: main.cpp
ext/: CMakeLists.txt
ext/glloadgen/: gl_core_4_5.hpp
src/: Bind.hpp  Buffer.hpp  Device.hpp  Draw.hpp  Error.hpp  Fence.hpp  GPUAsync.hpp  Pipeline.hpp  PixelType.hpp  ResourceScope.hpp  RingBuffer.hpp  SharedResource.hpp  Surface.hpp  Texture.hpp  UploadBuffer.hpp  Utils.hpp  main.cpp
src/autograph/: bind.hpp  buffer.hpp  command_list.hpp  compute.hpp  copy.hpp  device.hpp  draw.hpp  fence.hpp  pixel_format.hpp  surface.hpp  texture.hpp  upload_buffer.hpp  utils.hpp
src/autograph/api/: application.hpp  glfw.hpp
src/autograph/backend/opengl/: backend.cpp  backend.hpp  state.hpp
src/backend/opengl/: Backend.cpp  Backend.hpp  OpenGL.hpp  OpenGLPixelType.hpp  State.hpp
src/backend/opengl/fx2/: fx.cpp  fx.hpp  fxparser.hpp  parserbase.hpp
src/extra/image_io/: load_image.hpp  load_image_impl.cpp
src/extra/input/: input.hpp  input_glfw.cpp  input_glfw.hpp  input_win32.cpp  input_win32.hpp  stylus_win32.hpp
src/shaderpp/: shaderpp.cpp  shaderpp.hpp
